Refactor to use a single Program.cs file

--- a/1.1.2-msbuild/Dockerfile
+++ b/1.1.2-msbuild/Dockerfile
@@ -3,8 +3,8 @@ FROM microsoft/dotnet-nightly:1.1.1-sdk-rc4
 WORKDIR /dotnetapp
 
 # copy csproj and Nuget.config, and restore as distinct layers
-COPY *.csproj .
-COPY NuGet.config .
+COPY 1.1.2-msbuild/*.csproj .
+COPY 1.1.2-msbuild/NuGet.config .
 RUN dotnet restore
 
 # copy and build everything else
