--- a/1.0.3-projectjson/Dockerfile
+++ b/1.0.3-projectjson/Dockerfile
@@ -3,7 +3,7 @@ FROM microsoft/dotnet:1.0.3-sdk-projectjson
 WORKDIR /dotnetapp
 
 # copy project.json and restore as distinct layers
-COPY project.json .
+COPY 1.0.3-projectjson/project.json .
 RUN dotnet restore
 
 # copy and build everything else
