--- a/1.0.4-msbuild/Dockerfile
+++ b/1.0.4-msbuild/Dockerfile
@@ -3,8 +3,8 @@ FROM microsoft/dotnet-nightly:1.0.4-sdk-rc4
 WORKDIR /dotnetapp
 
 # copy csproj and Nuget.config, and restore as distinct layers
-COPY *.csproj .
-COPY NuGet.config .
+COPY 1.0.4-msbuild/*.csproj .
+COPY 1.0.4-msbuild/NuGet.config .
 RUN dotnet restore
 
 # copy and build everything else
